# OMR

./: .dockerignore  .gitignore  BACKEND_SETUP.md  Dockerfile  ENV_SETUP.md  FRONTEND_STRUCTURE.md  README.md  SUPABASE_SETUP.md  index.html  nixpacks.toml  package-lock.json  package.json  requirements.txt  supabase-schema-fixed.sql  supabase-schema-updated.sql  supabase-schema.sql  tailwind.config.ts  test_api_call.js  test_flow.md  test_frontend_backend.js  test_supabase_connection.js  test_supabase_connection.mjs
backend/: README.md  debug_omr.py  env.example  main.py  nixpacks.toml  quick_start.sh  railway.toml  requirements-railway.txt  requirements.txt  start.py  test_api.py  test_api_response.py  test_omr_core.py  test_processor_init.py
backend/config/: settings.py
backend/data/: answer_keys.json
backend/models/: schemas.py
backend/omr_core/: __init__.py  bubble_detection.py  core.py  evaluation.py  processors.py  template.py
backend/outputs/: .gitkeep
backend/services/: database.py  omr_processor.py
backend/templates/: generated_template.json
docs/: CONTEXT.md
python-backend/: main.py  pyproject.toml
src/: App-old.tsx  App-original.tsx  App.tsx  index.css
src/components/auth/: ProtectedRoute.tsx  UserProfile.tsx
src/components/features/: BackendTest.tsx  BubbleOverlay.tsx  EnvTest.tsx  EnvironmentSetup.tsx  EvaluationModeSelector.tsx  ProcessingStatus.tsx  (+4 more)
src/constants/: index.ts
src/contexts/: AuthContext.tsx
src/lib/: supabase.ts
src/services/: api.ts  backendApi.ts  omrProcessor.ts  supabaseService.ts
src/types/: index.ts
(+15 files in other folders)
