[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omr-backend"
version = "1.0.0"
description = "OMR Evaluation Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.24.3",
    "Pillow==10.0.1",
    "pytesseract==0.3.10",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.0.3",
    "httpx==0.25.2"
]

[project.scripts]
start = "cd backend && python -m uvicorn main:app --host 0.0.0.0 --port $PORT"
